Added code to perform Phase unwrapping from Ahat depth using stereo. Ran into many problems preventing it from working

--- a/notebooks/phase_unwrap/Understanding_HL_3D_CV.ipynb
+++ b/notebooks/phase_unwrap/Understanding_HL_3D_CV.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 12,
    "id": "51680904-3e40-4c94-b673-5f7e9e7149c3",
    "metadata": {
     "tags": []
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 13,
    "id": "ec27f04d-b27f-4e3d-b3d6-35b43e0ce45e",
    "metadata": {
     "tags": []
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 14,
    "id": "27263d85-5ac3-4d71-8a20-ca640d5ca279",
    "metadata": {
     "tags": []
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 15,
    "id": "329c25ec-7e7a-4f3e-8482-89d60cebcd76",
    "metadata": {
     "tags": []
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 16,
    "id": "05f0c5bb-7623-42fc-b2da-b876910609da",
    "metadata": {
     "tags": []
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 17,
    "id": "4c2390d6-4a2c-4b96-8641-82c4cdbd6221",
    "metadata": {
     "tags": []
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 18,
    "id": "487eff2a-64f7-4504-9c21-82113048ea8a",
    "metadata": {
     "tags": []
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 19,
    "id": "ed8805c2-d85a-42f8-a1ef-fd32b43910b0",
    "metadata": {
     "tags": []
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 20,
    "id": "431e5e9f-e54f-42f1-8dd7-377550ec32a5",
    "metadata": {
     "tags": []
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 21,
    "id": "a2778c8e-246a-4c18-9a2f-fdc60d76a4ae",
    "metadata": {
     "tags": []
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 22,
    "id": "a126500a-b586-4e86-b4f2-d6ba8ae8e9cc",
    "metadata": {
     "tags": []
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 23,
    "id": "a8dc381f-30a3-481b-9e82-377b1a91380b",
    "metadata": {
     "tags": []
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 24,
    "id": "d03d557e-3740-4aee-91f9-f0bb7e90caf9",
    "metadata": {
     "tags": []
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 25,
    "id": "335648db-aa45-43bb-bafc-830d975b1512",
    "metadata": {
     "tags": []
@@ -367,7 +367,7 @@
        "0.0"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "id": "dfe00c3a-32ff-41b3-8945-89ba4133f82c",
    "metadata": {
     "tags": []
@@ -400,6 +400,7 @@
     "visualizer = CameraPoseVisualizer([-scale, scale], [-scale, scale], [-scale, scale])\n",
     "\n",
     "#extrinsic is 4x4\n",
+    "# visualizer.extrinsic2pyramid(np.eye(4), 'r', focal_len_scaled=0.02)\n",
     "visualizer.extrinsic2pyramid(np.linalg.inv(calib_lt.extrinsics).T, 'r', focal_len_scaled=0.02)\n",
     "# visualizer.extrinsic2pyramid(np.linalg.inv(calib_lt.extrinsics).T, 'm', focal_len_scaled=0.02)\n",
     "\n",
