Fixed mesh saving notebook

--- a/notebooks/mesh_saving/Mesh Capture Testing.ipynb
+++ b/notebooks/mesh_saving/Mesh Capture Testing.ipynb
@@ -10,12 +10,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "13bea6f0-49e1-408f-b0c6-7e9da37c9edd",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
+      "[Open3D INFO] WebRTC GUI backend enabled.\n",
+      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -39,42 +49,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "fb5cb534-3e68-4e41-9ade-badb6e23dd94",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "PATH = '/home/andang/workspace/Computational_Vision/HL2/Hololens-Project/datasets/an_place/raw-04-09-08-07/'\n",
-    "PATH_MESH = PATH + 'mesh/'"
+    "# PATH = '/home/andang/workspace/CV_Lab/Hololens-Project/datasets/john_place/raw-05-09-18-46/'\n",
+    "PATH = '/home/andang/workspace/CV_Lab/Hololens-Project/datasets/uav_place/test/'\n",
+    "PATH_MESH = PATH + 'mesh/'\n",
+    "# PATH_MESH = PATH + 'gt_mesh/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "36de2379-e28b-484f-ac97-296eb196b787",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "mesh_hmap = {}\n",
+    "    mesh_hmap = {}\n",
     "\n",
-    "for path in os.listdir(PATH_MESH):\n",
-    "    split_names = (path.split('.txt')[0]).split('_')\n",
-    "    info_type = split_names[1]\n",
-    "    timestamp = split_names[2]\n",
-    "    data = np.loadtxt(PATH_MESH+path) #load up info\n",
-    "    \n",
-    "    if not (timestamp in mesh_hmap):\n",
-    "        mesh_hmap[timestamp] = {}\n",
-    "    mesh_hmap[timestamp][info_type] = data"
+    "    for path in os.listdir(PATH_MESH):\n",
+    "        split_names = (path.split('.txt')[0]).split('_')\n",
+    "        info_type = split_names[1]\n",
+    "        timestamp = split_names[2]\n",
+    "        index = split_names[3]\n",
+    "        data = np.loadtxt(PATH_MESH+path) #load up info\n",
+    "\n",
+    "        if not (timestamp in mesh_hmap):\n",
+    "            mesh_hmap[timestamp] = {}\n",
+    "\n",
+    "        if not index in mesh_hmap[timestamp]:\n",
+    "            mesh_hmap[timestamp][index] = {}\n",
+    "\n",
+    "\n",
+    "        mesh_hmap[timestamp][index][info_type] = data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "9ea8f269-70bc-4aab-bc1f-6255790f0453",
    "metadata": {
     "tags": []
@@ -84,23 +102,25 @@
     "#open3d rendering\n",
     "open3d_meshes = []\n",
     "\n",
-    "for i,j in mesh_hmap.items():\n",
-    "    \n",
-    "    vertex_positions = j['vertex']\n",
-    "    triangle_indices = j['triangles']\n",
-    "    pose = j['pose']\n",
-    "    vertex_position_scale = j['vertexscale']\n",
-    "    vertex_normals = j['normals']\n",
-    "    \n",
-    "    vertex_positions[:, 0:3] = vertex_positions[:, 0:3] * vertex_position_scale\n",
-    "    vertex_positions = vertex_positions @ pose\n",
-    "    vertex_normals = vertex_normals @ pose\n",
-    "    \n",
-    "    open3d_mesh = o3d.geometry.TriangleMesh()\n",
-    "    open3d_mesh.vertices = o3d.utility.Vector3dVector(vertex_positions[:,0:3])\n",
-    "    open3d_mesh.vertex_colors = o3d.utility.Vector3dVector(vertex_normals[:, 0:3])\n",
-    "    open3d_mesh.triangles = o3d.utility.Vector3iVector(triangle_indices)\n",
-    "    open3d_meshes.append(open3d_mesh)\n",
+    "for timestamp,j in mesh_hmap.items():\n",
+    "    for i,j in mesh_hmap[timestamp].items():\n",
+    "        vertex_positions = j['vertex']\n",
+    "        triangle_indices = j['triangles']\n",
+    "        pose = j['pose']\n",
+    "        vertex_position_scale = j['vertexscale']\n",
+    "        vertex_normals = j['normals']\n",
+    "\n",
+    "\n",
+    "        vertex_positions[:, 0:3] = vertex_positions[:, 0:3] * vertex_position_scale\n",
+    "        vertex_positions = vertex_positions @ pose\n",
+    "        vertex_normals = vertex_normals @ pose\n",
+    "\n",
+    "        open3d_mesh = o3d.geometry.TriangleMesh()\n",
+    "        open3d_mesh.vertices = o3d.utility.Vector3dVector(vertex_positions[:,0:3])\n",
+    "        open3d_mesh.vertex_colors = o3d.utility.Vector3dVector(vertex_normals[:, 0:3])\n",
+    "        open3d_mesh.triangles = o3d.utility.Vector3iVector(triangle_indices)\n",
+    "        open3d_meshes.append(open3d_mesh)\n",
+    "\n",
     "o3d.visualization.draw_geometries(open3d_meshes, mesh_show_back_face=True)"
    ]
   },
@@ -129,7 +149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
