Big revelation. The meshes from spatial mapping are too big. It seems the .obj file has what we need. There is some sort of alignment needed or correction from our frame to the mesh frame.

--- a/notebooks/mesh_saving/Mesh Capture Testing.ipynb
+++ b/notebooks/mesh_saving/Mesh Capture Testing.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "fb5cb534-3e68-4e41-9ade-badb6e23dd94",
    "metadata": {
     "tags": []
@@ -57,42 +57,42 @@
    "outputs": [],
    "source": [
     "# PATH = '/home/andang/workspace/CV_Lab/Hololens-Project/datasets/john_place/raw-05-09-18-46/'\n",
-    "PATH = '/home/andang/workspace/CV_Lab/Hololens-Project/datasets/uav_place/test/'\n",
+    "PATH = '/home/andang/workspace/Computational_Vision/HL2/Hololens-Project/datasets/john_place/vid1/'\n",
     "PATH_MESH = PATH + 'mesh/'\n",
     "# PATH_MESH = PATH + 'gt_mesh/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "36de2379-e28b-484f-ac97-296eb196b787",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "    mesh_hmap = {}\n",
+    "mesh_hmap = {}\n",
     "\n",
-    "    for path in os.listdir(PATH_MESH):\n",
-    "        split_names = (path.split('.txt')[0]).split('_')\n",
-    "        info_type = split_names[1]\n",
-    "        timestamp = split_names[2]\n",
-    "        index = split_names[3]\n",
-    "        data = np.loadtxt(PATH_MESH+path) #load up info\n",
+    "for path in os.listdir(PATH_MESH):\n",
+    "    split_names = (path.split('.txt')[0]).split('_')\n",
+    "    info_type = split_names[1]\n",
+    "    timestamp = split_names[2]\n",
+    "    index = split_names[3]\n",
+    "    data = np.loadtxt(PATH_MESH+path) #load up info\n",
     "\n",
-    "        if not (timestamp in mesh_hmap):\n",
-    "            mesh_hmap[timestamp] = {}\n",
+    "    if not (timestamp in mesh_hmap):\n",
+    "        mesh_hmap[timestamp] = {}\n",
     "\n",
-    "        if not index in mesh_hmap[timestamp]:\n",
-    "            mesh_hmap[timestamp][index] = {}\n",
+    "    if not index in mesh_hmap[timestamp]:\n",
+    "        mesh_hmap[timestamp][index] = {}\n",
     "\n",
     "\n",
-    "        mesh_hmap[timestamp][index][info_type] = data"
+    "    mesh_hmap[timestamp][index][info_type] = data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "9ea8f269-70bc-4aab-bc1f-6255790f0453",
    "metadata": {
     "tags": []
@@ -112,7 +112,10 @@
     "\n",
     "\n",
     "        vertex_positions[:, 0:3] = vertex_positions[:, 0:3] * vertex_position_scale\n",
-    "        vertex_positions = vertex_positions @ pose\n",
+    "        vertex_positions = (vertex_positions/vertex_positions[:,3:]) @ pose\n",
+    "        \n",
+    "        d = np.linalg.norm(vertex_normals, axis=1)\n",
+    "        vertex_normals[d > 0, :] = vertex_normals[d > 0, :] / d[d > 0, np.newaxis]\n",
     "        vertex_normals = vertex_normals @ pose\n",
     "\n",
     "        open3d_mesh = o3d.geometry.TriangleMesh()\n",
@@ -120,8 +123,46 @@
     "        open3d_mesh.vertex_colors = o3d.utility.Vector3dVector(vertex_normals[:, 0:3])\n",
     "        open3d_mesh.triangles = o3d.utility.Vector3iVector(triangle_indices)\n",
     "        open3d_meshes.append(open3d_mesh)\n",
+    "    break\n",
     "\n",
     "o3d.visualization.draw_geometries(open3d_meshes, mesh_show_back_face=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "72b00f29-1e73-4017-98cd-187b09cead03",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "full_mesh = o3d.geometry.TriangleMesh()\n",
+    "for open3d_mesh in open3d_meshes:\n",
+    "    full_mesh += open3d_mesh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "00eb220d-8f31-4c7a-832f-b8511db04318",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "o3d.io.write_triangle_mesh('test_stuff.obj',full_mesh,write_ascii=True,write_triangle_uvs=True, write_vertex_colors=True, write_vertex_normals=True)"
    ]
   },
   {
@@ -149,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
