--- a/notebooks/phase_unwrap/Phase Unwrap Visualization.ipynb
+++ b/notebooks/phase_unwrap/Phase Unwrap Visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 1,
    "id": "5bea8109-ff23-41e0-8477-1aa8fb0359e9",
    "metadata": {
     "tags": []
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 2,
    "id": "4f5cb39d-4935-44ec-8ee1-d602efda30e1",
    "metadata": {
     "tags": []
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 3,
    "id": "608c5e72-4097-48aa-b587-567bad99ba6c",
    "metadata": {
     "tags": []
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 4,
    "id": "0486d06f-4a91-4339-b940-236f86255333",
    "metadata": {
     "tags": []
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 5,
    "id": "3015a58a-69fe-4f1f-aa8e-04899fc04a04",
    "metadata": {
     "tags": []
@@ -103,10 +103,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f1873ffbc70>"
+       "<matplotlib.image.AxesImage at 0x7fab21db8910>"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 6,
    "id": "5f15301b-9aa0-41b5-b136-a42d55860112",
    "metadata": {
     "tags": []
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 7,
    "id": "ee1f477b-47ca-4913-bb7d-082a314fc376",
    "metadata": {
     "tags": []
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 8,
    "id": "756e350d-c62c-4a89-bfc0-25bbf550fab6",
    "metadata": {
     "tags": []
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 9,
    "id": "1a4e01d0-1ab5-45ca-906b-2a80e0b664cd",
    "metadata": {
     "tags": []
@@ -227,12 +227,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 10,
    "id": "a86e50df-4ce7-4991-b217-b6aaaa2b72e2",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "OSError",
+     "evalue": "[Errno 113] No route to host",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m data \u001b[38;5;241m=\u001b[39m \u001b[43mhl2ss\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdownload_calibration_rm_depth_ahat\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m192.168.1.227\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mhl2ss\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mStreamPort\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mRM_DEPTH_AHAT\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m calib_ahat\u001b[38;5;241m.\u001b[39mundistort_map \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mundistort_map\n",
+      "File \u001b[0;32m~/workspace/Computational_Vision/HL2/Hololens-Project/hl2ss/viewer/hl2ss.py:1327\u001b[0m, in \u001b[0;36mdownload_calibration_rm_depth_ahat\u001b[0;34m(host, port)\u001b[0m\n\u001b[1;32m   1326\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdownload_calibration_rm_depth_ahat\u001b[39m(host, port):\n\u001b[0;32m-> 1327\u001b[0m     data   \u001b[38;5;241m=\u001b[39m \u001b[43m_download_mode2_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43mhost\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mport\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m_create_configuration_for_rm_mode2\u001b[49m\u001b[43m(\u001b[49m\u001b[43mStreamMode\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mMODE_2\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m_Mode2Layout_RM_DEPTH_AHAT\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mFLOAT_COUNT\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m_SIZEOF\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mFLOAT\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1328\u001b[0m     floats \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mfrombuffer(data, dtype\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39mfloat32)\n\u001b[1;32m   1330\u001b[0m     uv2x       \u001b[38;5;241m=\u001b[39m floats[_Mode2Layout_RM_DEPTH_AHAT\u001b[38;5;241m.\u001b[39mBEGIN_UV2X       : _Mode2Layout_RM_DEPTH_AHAT\u001b[38;5;241m.\u001b[39mEND_UV2X      ]\u001b[38;5;241m.\u001b[39mreshape(Parameters_RM_DEPTH_AHAT\u001b[38;5;241m.\u001b[39mSHAPE)\n",
+      "File \u001b[0;32m~/workspace/Computational_Vision/HL2/Hololens-Project/hl2ss/viewer/hl2ss.py:1302\u001b[0m, in \u001b[0;36m_download_mode2_data\u001b[0;34m(host, port, configuration, bytes)\u001b[0m\n\u001b[1;32m   1299\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_download_mode2_data\u001b[39m(host, port, configuration, \u001b[38;5;28mbytes\u001b[39m):\n\u001b[1;32m   1300\u001b[0m     c \u001b[38;5;241m=\u001b[39m _client()\n\u001b[0;32m-> 1302\u001b[0m     \u001b[43mc\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mopen\u001b[49m\u001b[43m(\u001b[49m\u001b[43mhost\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mport\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1303\u001b[0m     c\u001b[38;5;241m.\u001b[39msendall(configuration)\n\u001b[1;32m   1304\u001b[0m     data \u001b[38;5;241m=\u001b[39m c\u001b[38;5;241m.\u001b[39mdownload(\u001b[38;5;28mbytes\u001b[39m, ChunkSize\u001b[38;5;241m.\u001b[39mSINGLE_TRANSFER)\n",
+      "File \u001b[0;32m~/workspace/Computational_Vision/HL2/Hololens-Project/hl2ss/viewer/hl2ss.py:313\u001b[0m, in \u001b[0;36m_client.open\u001b[0;34m(self, host, port)\u001b[0m\n\u001b[1;32m    311\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mopen\u001b[39m(\u001b[38;5;28mself\u001b[39m, host, port):\n\u001b[1;32m    312\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_socket \u001b[38;5;241m=\u001b[39m socket\u001b[38;5;241m.\u001b[39msocket(socket\u001b[38;5;241m.\u001b[39mAF_INET, socket\u001b[38;5;241m.\u001b[39mSOCK_STREAM)\n\u001b[0;32m--> 313\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_socket\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconnect\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mhost\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mport\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mOSError\u001b[0m: [Errno 113] No route to host"
+     ]
+    }
+   ],
    "source": [
     "data = hl2ss.download_calibration_rm_depth_ahat(\"192.168.1.227\", hl2ss.StreamPort.RM_DEPTH_AHAT)\n",
     "calib_ahat.undistort_map = data.undistort_map"
@@ -251,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "id": "18e33b3d-1fc6-46bb-b647-0cf5ff3920ca",
    "metadata": {
     "tags": []
@@ -278,31 +293,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "id": "8dc577a4-f3f8-4d78-b9d0-27412f507b58",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[362.6172    0.      311.65042   0.     ]\n",
-      " [  0.      357.87915 227.55858   0.     ]\n",
-      " [  0.        0.        1.        0.     ]\n",
-      " [  0.        0.        0.        1.     ]]\n",
-      "[[362.57703   0.      332.9669    0.     ]\n",
-      " [  0.      358.7988  239.92181   0.     ]\n",
-      " [  0.        0.        1.        0.     ]\n",
-      " [  0.        0.        0.        1.     ]]\n",
-      "[[114.55879   0.      256.11627   0.     ]\n",
-      " [  0.      114.85222 260.75302   0.     ]\n",
-      " [  0.        0.        1.        0.     ]\n",
-      " [  0.        0.        0.        1.     ]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(calib_lf.intrinsics.T)\n",
     "print(calib_rf.intrinsics.T)\n",
