Added lots of notebooks testing out mesh and aligning it with camera pose

--- a/notebooks/mesh_saving/Align Mesh and Camera.ipynb
+++ b/notebooks/mesh_saving/Align Mesh and Camera.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 307,
    "id": "9f6deaaf-928b-4b40-a5dc-c9f9b0154d28",
    "metadata": {
     "tags": []
@@ -130,11 +130,11 @@
     "    return calib_pv, calib_lt, calib_lf, calib_rf, xy1, scale\n",
     "\n",
     "def integrate(calibration_vlc, calibration_lt, data_vlc_payload, data_vlc_pose, data_lt_payload, data_lt_pose, rays, scale):\n",
-    "    # depth = rm_depth_undistort(data_lt_payload, calibration_lt.undistort_map) / scale\n",
-    "    depth = data_lt_payload / scale\n",
+    "    depth = rm_depth_undistort(data_lt_payload, calibration_lt.undistort_map) / scale\n",
     "    depth = depth[:, :, np.newaxis]\n",
-    "    # color = cv2.remap(data_vlc_payload, calibration_vlc.undistort_map[:, :, 0], calibration_vlc.undistort_map[:, :, 1], cv2.INTER_LINEAR)\n",
-    "    color = data_vlc_payload\n",
+    "    \n",
+    "    color = cv2.remap(data_vlc_payload, calibration_vlc.undistort_map[:, :, 0], calibration_vlc.undistort_map[:, :, 1], cv2.INTER_LINEAR)\n",
+    "    # color = data_vlc_payload\n",
     "    color = rm_vlc_to_rgb(color)\n",
     "\n",
     "    # lt_points          = hl2ss_3dcv.rm_depth_to_points(rays, depth)\n",
@@ -143,6 +143,7 @@
     "    lt_to_world        = camera_to_rignode(calibration_lt.extrinsics) @ reference_to_world(data_lt_pose)\n",
     "    world_to_vlc_image = world_to_reference(data_vlc_pose) @ rignode_to_camera(calibration_vlc.extrinsics) @ camera_to_image(calibration_vlc.intrinsics)\n",
     "    world_points       = transform(lt_points, lt_to_world)\n",
+    "    # world_points = data_lt_pose.T @ np.linalg.inv(calibration_lt.extrinsics.T) @ lt_points\n",
     "    vlc_uv             = project(world_points, world_to_vlc_image)\n",
     "    # color              = cv2.remap(color, vlc_uv[:, :, 0].astype(np.float32), vlc_uv[:, :, 1].astype(np.float32), cv2.INTER_LINEAR).astype(np.float32) / hl2ss._RANGEOF.U8_MAX\n",
     "    pcd = o3d.geometry.PointCloud()\n",
@@ -162,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 308,
    "id": "7e878146-b513-4d39-b921-0c53e82ed416",
    "metadata": {
     "tags": []
@@ -175,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 309,
    "id": "35b4ffb5-2e58-400b-825b-75684e5495cf",
    "metadata": {
     "tags": []
@@ -195,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 310,
    "id": "0a6c5a22-3c65-42c1-9aed-bcfd61352b19",
    "metadata": {
     "tags": []
@@ -210,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 311,
    "id": "d2d1e116-3ef1-410b-875d-ef1118ceca5b",
    "metadata": {
     "tags": []
@@ -223,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 312,
    "id": "c97bc69a-e612-4ec7-aed0-6ea3a6d2a842",
    "metadata": {
     "tags": []
@@ -236,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 313,
    "id": "db2a9fd3-6738-42ef-90d0-e3da25996c51",
    "metadata": {
     "tags": []
@@ -248,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 314,
    "id": "09e97325-d212-40be-ac51-7898e41f673a",
    "metadata": {
     "tags": []
@@ -261,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 315,
    "id": "016d9b69-7428-4c3e-a72e-9ed7be80d103",
    "metadata": {
     "tags": []
@@ -269,7 +270,7 @@
    "outputs": [],
    "source": [
     "# show the point cloud generation code\n",
-    "pcd0,pts3d = integrate(calib_lf, calib_lt, vlclf_im0, j_vlclf[vlclf_tstamps[0]], lt_im0, j_vlclf[vlclf_tstamps[0]], xy, scale)\n",
+    "pcd0,pts3d = integrate(calib_lf, calib_lt, vlclf_im0, np.array(j_vlclf[vlclf_tstamps[0]]), lt_im0, np.array(j_vlclf[vlclf_tstamps[0]]), xy, scale)\n",
     "pts3d = pts3d.T.reshape(3,-1)\n",
     "\n",
     "xs = pts3d[0,:]\n",
@@ -279,34 +280,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 316,
    "id": "8cd0b0ad-20ea-4bd6-8275-0e76c68a6638",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for *: 'open3d.cuda.pybind.geometry.PointCloud' and 'float'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[202], line 8\u001b[0m\n\u001b[1;32m      6\u001b[0m lt_im \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mmean(get_im(lt_tstamps[sep\u001b[38;5;241m*\u001b[39mi], PATH\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdepth_lt/\u001b[39m\u001b[38;5;124m'\u001b[39m),axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m)\n\u001b[1;32m      7\u001b[0m pcd0,pts3d \u001b[38;5;241m=\u001b[39m integrate(calib_lf, calib_lt, vlclf_im, np\u001b[38;5;241m.\u001b[39marray(j_vlclf[vlclf_tstamps[sep\u001b[38;5;241m*\u001b[39mi]]), lt_im, np\u001b[38;5;241m.\u001b[39marray(j_vlclf[vlclf_tstamps[sep\u001b[38;5;241m*\u001b[39mi]]), xy, scale)\n\u001b[0;32m----> 8\u001b[0m pcd0 \u001b[38;5;241m=\u001b[39m \u001b[43mpcd0\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mvertex_position_scale\u001b[49m\n\u001b[1;32m      9\u001b[0m pcds\u001b[38;5;241m.\u001b[39mappend(pcd0)\n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for *: 'open3d.cuda.pybind.geometry.PointCloud' and 'float'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "NUM_PCD = 1\n",
+    "NUM_PCD = 2\n",
     "sep = 1\n",
     "pcds = []\n",
     "for i in range(NUM_PCD):\n",
     "    vlclf_im = np.mean(get_im(vlclf_tstamps[sep*i], PATH+'vlc_lf/'),axis=2)\n",
     "    lt_im = np.mean(get_im(lt_tstamps[sep*i], PATH+'depth_lt/'),axis=2)\n",
     "    pcd0,pts3d = integrate(calib_lf, calib_lt, vlclf_im, np.array(j_vlclf[vlclf_tstamps[sep*i]]), lt_im, np.array(j_vlclf[vlclf_tstamps[sep*i]]), xy, scale)\n",
-    "    pcds.append(pcd0)\n",
-    "    "
+    "    pcds.append(pcd0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 317,
+   "id": "8cb17b0c-4075-4c94-bc1e-d7004e3cc885",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "o3d.visualization.draw_geometries(pcds, mesh_show_back_face=True,point_show_normal=True)"
    ]
   },
   {
